After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719975 - Fix apparent typo
Fix apparent typo
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: power
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2013-12-06 14:14 UTC by Carlos Garnacho
Modified: 2013-12-10 12:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
power: Fix what seems to be a c&p typo (1.00 KB, patch)
2013-12-06 14:15 UTC, Carlos Garnacho
committed Details | Review

Description Carlos Garnacho 2013-12-06 14:14:41 UTC
There seems to be a typo in the 30s timeout that the power plugin sets to inhibit lid close action when there's external monitors, it announces through g_debug() that it'd keep running to check again after, but actually returns G_SOURCE_REMOVE. That looks like a c&p typo, I'm attaching a patch to fix that.
Comment 1 Carlos Garnacho 2013-12-06 14:15:28 UTC
Created attachment 263671 [details] [review]
power: Fix what seems to be a c&p typo

The check to inhibit the lid close action when there's external monitors was
quitting after the first run, even though it announces it will check again later.
Comment 2 Bastien Nocera 2013-12-10 10:56:46 UTC
Review of attachment 263671 [details] [review]:

Correct.
Comment 3 Carlos Garnacho 2013-12-10 12:48:03 UTC
Attachment 263671 [details] pushed as 89e70a9 - power: Fix what seems to be a c&p typo