power: Fix what seems to be a c&p typo

The check to inhibit the lid close action when there's external monitors was
quitting after the first run, even though it announces it will check again later.

https://bugzilla.gnome.org/show_bug.cgi?id=719975